Fix Filler 2 flexbox wrapping onto same line on large screens

--- a/styles.css
+++ b/styles.css
@@ -208,6 +208,7 @@ blockquote cite {
 #leopard-text {
     text-align: right;
     display: none;
+    width: 100%;
 }
 
 #filler2 {
